Howto install; Updated authors, changelog and news

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Wes Hofmann <whofmann@yahoo.com>
 Manoj Iyer <manjo@austin.ibm.com>
 Klaus Kaiser <kaiser@freiburg.newtec.de>
 Tobias Jahn <jahn@in.tum.de>
+Parménides GV <parmegv@sdf.org>
 
 IDEAS
 
