--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,9 @@ See the end for copying conditions.
 
 Please send `stress' bug reports, questions, and suggestions to
 <apw@rossby.metr.ou.edu>.
-
+2014-08-14  Version 1.0.4
+ * Android's ndk-build works from root directory
+ 
 2010-02-17  Version 1.0.3
 
  * Fix manpage problem reported by Mark Lumsden.  Remove --no-clean
